implement candlestick chart

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Shared/NavMenu.razor
@@ -6,93 +6,98 @@
             </div>
 
             <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-                     <ul class="nav flex-column">
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="welcome">
-                                 <span class="oi oi-home" aria-hidden="true"></span>Welcome
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="SimpleBarChart">
-                                 <span class="oi oi-bar-chart" aria-hidden="true"></span>Simple BarChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="HorizontalBarChart">
-                                 <span class="oi oi-bar-chart" aria-hidden="true"></span>Horizontal BarChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="StackedBarChart">
-                                 <span class="oi oi-bar-chart" aria-hidden="true"></span>Stacked BarChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="TimeBarChart">
-                                 <span class="oi oi-bar-chart" aria-hidden="true"></span>Time BarChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="LinearLineChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Linear LineChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="LogarithmicLineChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Logarithmic LineChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="TimeLineChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="DoughnutChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>DoughChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="PieChart">
-                                 <span class="oi oi-pie-chart" aria-hidden="true"></span>PieChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="PolarAreaChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>PolarAreaChart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="BubbleChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Bubble Chart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="ScatterChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Scatter Chart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="RadarChart">
-                                 <span class="oi oi-graph" aria-hidden="true"></span>Radar Chart
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="OnClickHandler">
-                                 <span class="oi oi-info" aria-hidden="true"></span>OnClickHandler
-                             </NavLink>
-                         </li>
-                         <li class="nav-item px-3">
-                             <NavLink class="nav-link" href="SineLineChart">
-                                 <span class="oi oi-info" aria-hidden="true"></span>Sine Line Chart
-                             </NavLink>
-                         </li>
-					<li class="nav-item px-3">
-						<NavLink class="nav-link" href="about">
-							<span class="oi oi-info" aria-hidden="true"></span>About
-						</NavLink>
-					</li>
-				</ul>
+                <ul class="nav flex-column">
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="welcome">
+                            <span class="oi oi-home" aria-hidden="true"></span>Welcome
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="SimpleBarChart">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span>Simple BarChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="HorizontalBarChart">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span>Horizontal BarChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="StackedBarChart">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span>Stacked BarChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="TimeBarChart">
+                            <span class="oi oi-bar-chart" aria-hidden="true"></span>Time BarChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="LinearLineChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Linear LineChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="LogarithmicLineChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Logarithmic LineChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="TimeLineChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Time LineChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="DoughnutChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>DoughChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="PieChart">
+                            <span class="oi oi-pie-chart" aria-hidden="true"></span>PieChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="PolarAreaChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>PolarAreaChart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="BubbleChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Bubble Chart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="ScatterChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Scatter Chart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="RadarChart">
+                            <span class="oi oi-graph" aria-hidden="true"></span>Radar Chart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="OnClickHandler">
+                            <span class="oi oi-info" aria-hidden="true"></span>OnClickHandler
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="SineLineChart">
+                            <span class="oi oi-info" aria-hidden="true"></span>Sine Line Chart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="FinancialChart">
+                            <span class="oi oi-info" aria-hidden="true"></span>Financial chart
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="about">
+                            <span class="oi oi-info" aria-hidden="true"></span>About
+                        </NavLink>
+                    </li>
+                </ul>
 	             </div>
 
 	             @code {
