CamelCase -> PascalCase, add/improve summaries

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LogarithmicLineChartComponent.razor
@@ -46,7 +46,7 @@
                 },
                 Scales = new Scales
                 {
-                    xAxes = new List<CartesianAxis>
+                    XAxes = new List<CartesianAxis>
                     {
                         new LinearCartesianAxis
                         {
@@ -64,7 +64,7 @@
                             }
                         }
                     },
-                    yAxes = new List<CartesianAxis>
+                    YAxes = new List<CartesianAxis>
                     {
                         new LogarithmicAxis
                         {
