--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/TimeLineChartComponent.razor
@@ -70,7 +70,7 @@
                 },
                 Scales = new Scales
                 {
-                    xAxes = new List<CartesianAxis>
+                    XAxes = new List<CartesianAxis>
                     {
                         new TimeAxis
                         {
