--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Fun/SineLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Fun/SineLineChartComponent.razor
@@ -39,7 +39,7 @@
                 },
                 Scales = new Scales
                 {
-                    xAxes = new List<CartesianAxis>
+                    XAxes = new List<CartesianAxis>
                     {
                         new LinearCartesianAxis
                         {
@@ -57,7 +57,7 @@
                             }
                         }
                     },
-                    yAxes = new List<CartesianAxis>
+                    YAxes = new List<CartesianAxis>
                     {
                         new LinearCartesianAxis
                         {
