--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LinearLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LinearLineChartComponent.razor
@@ -52,7 +52,7 @@
                 },
                 Scales = new Scales
                 {
-                    xAxes = new List<CartesianAxis>
+                    XAxes = new List<CartesianAxis>
                     {
                         new LinearCartesianAxis
                         {
@@ -70,7 +70,7 @@
                             }
                         }
                     },
-                    yAxes = new List<CartesianAxis>
+                    YAxes = new List<CartesianAxis>
                     {
                         new LinearCartesianAxis
                         {
