--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/FinancialCharts/FinancialChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/FinancialCharts/FinancialChartComponent.razor
@@ -6,17 +6,21 @@
 @using ChartJs.Blazor.Util
 
 <h2>Financial chart example</h2>
-<li>
-    <ChartJsFinancialChart @ref="_financialChart" Config="@_config" />
-</li>
-<li>
-    <button class="btn btn-primary" @onclick="OnClick">Fill On/Off</button>
-</li>
+<div>
+    <div>
+        <ChartJsFinancialChart @ref="_financialChart" Config="@_config" />
+    </div>
+    <div>
+        <button class="btn btn-primary">Fill On/Off</button>
+    </div>
+</div>
 
 @code {
     private ChartJs.Blazor.ChartJS.FinancialChart.FinancialConfig _config;
     private ChartJsFinancialChart _financialChart;
 
+    private int pointCount = 20;
+    private Random Random = new Random();
 
     protected override Task OnInitializedAsync()
     {
@@ -46,13 +50,25 @@
             }
         };
 
-        var financialChartDataSet = new ChartJs.Blazor.ChartJS.FinancialChart.FinancialDataset<ChartJs.Blazor.ChartJS.Common.Time.TimeTuple<double[]>>(chartType: ChartJs.Blazor.ChartJS.Common.Enums.ChartType.CandleStick);
+        var financialChartDataSet = new ChartJs.Blazor.ChartJS.FinancialChart.FinancialDataset<FinancialData>(chartType: ChartJs.Blazor.ChartJS.Common.Enums.ChartType.CandleStick);
+
+        for (int index = 0; index < pointCount; ++index)
+        {
+            double value = Random.NextDouble();
+            financialChartDataSet.Add(new FinancialData
+            {
+                Time = DateTime.UtcNow.AddDays(index),
+                Open = value,
+                High = value + (value * Random.NextDouble()),
+                Low = value + (value * Random.NextDouble()) - Random.NextDouble(),
+                Close = value + (value * Random.NextDouble()) -(value * Random.NextDouble())
+
+            });
+
+        }
+
+
         _config.Data.Datasets.Add(financialChartDataSet);
         return Task.CompletedTask;
-    }
-
-    private async void OnClick()
-    {
-
     }
 }
