Stringify before the interop-call
This commit removed cycle.js and uses a replacer method along with JSON.stringify to serialize the object already before actually passing it to C#. This is a performance improvement because blazor doesn't have to deserialize the object, only that string. We want a string anyway since we deserialize using json.net (custom converters, consistency, etc) so we can get rid of that conversion. If you don't have a type to deserialize the callback parameters to, you now use json.net objects like JObject, JArray and JValue instead of JsonElement.

--- a/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Pages/Test.razor
+++ b/samples/ClientSide/ChartJs.Blazor.Sample.ClientSide/Pages/Test.razor
@@ -11,7 +11,7 @@
 @using ChartJs.Blazor.ChartJS.Common.Axes.Ticks
 @using ChartJs.Blazor.ChartJS.Common.Handlers
 @using ChartJs.Blazor.Interop
-@using System.Text.Json
+@using Newtonsoft.Json.Linq;
 
 <ChartJsBarChart @ref="barChartJs" Config="@_config" Height="250"/>
 
@@ -58,7 +58,7 @@
                         }
                     }
                 },
-                OnClick = new DelegateHandler<ChartMouseEvent>((e, elems) => Console.WriteLine(e.GetRawText())),
+                OnClick = new DelegateHandler<ChartMouseEvent>((e, elems) => Console.WriteLine(e.ToString())),
                 Legend = new Legend
                 {
                     OnClick = new DelegateHandler<LegendItemMouseEvent>(StaticInterop.TestInterop)
@@ -95,7 +95,7 @@
     {
         private static int s_eventCount = 0;
 
-        public static void TestInterop(JsonElement @event, LegendItem args)
+        public static void TestInterop(JObject @event, LegendItem args)
         {
             Console.WriteLine($"{System.Threading.Interlocked.Increment(ref s_eventCount)}. event");
         }
