Add attribute to ignore callback value
When the callback receives a large object, like chart-data in the legend item filter (around 12000 chars stringified), it takes a rather long time deserialize it. Applying this new attribute will skip deserialization for that parameter and the default value will be passed.

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Callbacks/LegendCallbacksComponent.razor
@@ -142,7 +142,7 @@
         Console.WriteLine($"Index: {args.Index}, Hidden: {args.Hidden}, Text: '{args.Text}'");
     }
 
-    private bool LabelsFilter(LegendItem item, JObject chart)
+    private bool LabelsFilter(LegendItem item, [IgnoreCallbackValue] JObject chart)
     {
         int index = item.Index.Value;
         bool shown = index % 3 != 0;
