--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Fun/SineLineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Fun/SineLineChartComponent.razor
@@ -56,7 +56,7 @@
                             },
                             Ticks = new LinearCartesianTicks
                             {
-                                Callback = new JavascriptHandler<AxisTickCallback>("SampleInterop.MsTicksCallback")
+                                Callback = new JavaScriptHandler<AxisTickCallback>("SampleInterop.MsTicksCallback")
                             }
                         }
                     },
